fix: Button component z-index

--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -9,6 +9,7 @@
   overflow: hidden;
 
   position: relative;
+  z-index: 1;
 
   transition: 
     background 300ms ease-in-out, 
@@ -31,6 +32,7 @@
 
   &.outline {
     border: 4px solid var(--c-candy-red);
+    background: var(--c-background-200);
 
     &:hover,
     &:focus { 
